--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.3",
-    "graphql": "^16.8.1"
+    "dotenv": "^16.3.1",
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.3",
+    "mongoose-unique-validator": "^4.0.0"
   }
 }
